<resources>
    <string name="app_name">QuizzApp</string>
    <string name="android">Android</string>
    <string name="anime">Anime</string>
    <string name="documentary">Documentary</string>
    <string name="film">Film</string>
    <string name="game">Game</string>
    <string name="ios">Ios</string>
    <string name="play">Chơi</string>
    <string name="history">Lịch sử chơi</string>
    <string name="choose_topic">Bạn muốn trả lời chủ đề nào?</string>
    <string name="choose_level">Chọn cấp độ mà bạn muốn chơi</string>
    <string name="easy">Dễ</string>
    <string name="normal">Trung Bình</string>
    <string name="hard">Khó</string>
    <string name="True">Đúng</string>
    <string name="False">Sai</string>
    <string name="finish">Hoàn Thành</string>
    <string name="share">Chia sẻ thành tích</string>
    <string name="result_first">Bạn đã trả lời đúng</string>
    <string name="question">câu hỏi</string>
    <string name="feedback">Góp ý</string>
    <string name="information">Thông tin trò chơi</string>
    <string name="group">Nhóm phát triển:</string>
    <string name="member1">- Cao Xuân Bình</string>
    <string name="member2">- Nguyễn Minh Tâm</string>
    <string name="contact">Thông tin liên hệ:</string>
    <string name="emailContact">- 20021493@vnu.edu.vn</string>
    <string name="or">or</string>
    <string name="emailContact2">- 20021580@vnu.edu.vn</string>

</resources>