<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contactFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Information">
    <TextView
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="start"
        android:padding="30dp"
        android:text="@string/group"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/member1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/member1"
        android:textSize="25sp"
        android:paddingStart="30dp"
        android:paddingVertical="10dp"
        android:gravity="start"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/black"
        android:layout_below="@+id/group"
        />
    <TextView
        android:id="@+id/member2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/member2"
        android:textSize="25sp"
        android:paddingStart="30dp"
        android:paddingVertical="10dp"
        android:gravity="start"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/black"
        android:layout_below="@+id/member1"
        />
    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/contact"
        android:textSize="30sp"
        android:padding="30dp"
        android:gravity="start"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/black"
        android:layout_below="@id/member2"
        />
    <TextView
        android:id="@+id/emailContact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/emailContact"
        android:textSize="25sp"
        android:paddingStart="30dp"
        android:paddingVertical="10dp"
        android:gravity="start"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/black"
        android:layout_below="@+id/contact"
        />
    <TextView
        android:id="@+id/emailContact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/emailContact2"
        android:textSize="25sp"
        android:paddingStart="30dp"
        android:paddingVertical="10dp"
        android:gravity="start"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/black"
        android:layout_below="@+id/emailContact1"
        />
</RelativeLayout>