<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Fragment.Result">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/result_first"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"/>
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="75sp"
        android:textColor="@color/purple_200"
        android:fontFamily="sans-serif-condensed"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:background="@drawable/shape_button"
            android:layout_marginVertical="15dp"
            android:textAlignment="center"
            android:paddingHorizontal="75dp"
            android:paddingVertical="25dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="false"
            />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:background="@drawable/shape_button"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="25dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:textAllCaps="false"
        />

</LinearLayout>