<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ChooseTopic"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textview_main_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:padding="30dp"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/choose_topic"
        android:fontFamily="sans-serif-condensed-light"
        />

    <ScrollView
        android:id="@+id/scrollview_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:id="@+id/linear_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/topic1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game"
                    android:background="@drawable/shape_button"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="viewStart"
                    android:drawableEnd="@drawable/game"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="25dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:textAllCaps="false"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/topic2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anime"
                    android:background="@drawable/shape_button"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="viewStart"
                    android:drawableEnd="@drawable/anime"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="25dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:textAllCaps="false"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/topic3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/film"
                    android:background="@drawable/shape_button"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="viewStart"
                    android:drawableEnd="@drawable/film"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="25dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:textAllCaps="false"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/topic4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/android"
                    android:background="@drawable/shape_button"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="viewStart"
                    android:drawableEnd="@drawable/android"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="25dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:textAllCaps="false"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/topic5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ios"
                    android:background="@drawable/shape_button"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="viewStart"
                    android:drawableEnd="@drawable/ios"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="25dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:textAllCaps="false"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/topic6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/documentary"
                    android:background="@drawable/shape_button"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="viewStart"
                    android:drawableEnd="@drawable/documentary"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="25dp"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>